--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -10,6 +10,7 @@
     bottom: 0;
     z-index: $z-index-modal;
     background-color: $ui-modal-overlay;
+    overflow: auto;
 }
 
 .modal-content * {
